@@ -1,6 +1,7 @@
 
 import org.gradle.kotlin.dsl.support.zipTo
 import org.openjfx.gradle.JavaFXOptions
+import java.net.URI
 import java.util.*
 
 buildscript {
@@ -11,21 +12,19 @@ buildscript {
 
 group = "com.sgar"
 version = "1.0-SNAPSHOT"
-val cPlatforms = listOf("mac-aarch64", "linux", "win") // compile for these platforms. "mac", "mac-aarch64", "linux", "win"
-val needMajorJavaVersion = 21
+val crossPlatforms = listOf("mac-aarch64", "windows-x64", "linux-x64") // create apps for these platforms [linux|mac|windows] - architectures [x86|x64|aarch64], see adoptium parameters https://api.adoptium.net/q/swagger-ui/#/Binary/getBinary
+val needMajorJavaVersion = 25
 val javaVersion = System.getProperty("java.version")!!
 println("Current Java version: $javaVersion")
 if (JavaVersion.current().majorVersion.toInt() != needMajorJavaVersion) throw GradleException("Use Java $needMajorJavaVersion")
-
-println("Current Java version: ${JavaVersion.current()}")
 
 plugins {
     scala
     id("idea")
     application
-    id("com.github.ben-manes.versions") version "0.52.0"
-    id("org.openjfx.javafxplugin") version "0.0.13"
-    id("org.beryx.runtime") version "1.13.1"
+    id("org.openjfx.javafxplugin") version "0.1.0"
+    id("com.github.ben-manes.versions") version "0.53.0"
+    id("org.beryx.runtime") version "2.0.1"
 }
 
 idea {
@@ -37,7 +36,7 @@ idea {
 
 application {
     mainClass.set("sgar.Sgar")
-    applicationDefaultJvmArgs = listOf("-Dprism.verbose=true")
+    applicationDefaultJvmArgs = listOf("-Dprism.verbose=true", "--enable-native-access=javafx.graphics")
 }
 
 repositories {
@@ -45,9 +44,8 @@ repositories {
 }
 
 javafx {
-    version = javaVersion
-//    modules = listOf("javafx.base", "javafx.controls", "javafx.fxml", "javafx.graphics", "javafx.media", "javafx.swing")
-    modules = listOf("javafx.base", "javafx.controls", "javafx.media")
+    version = needMajorJavaVersion.toString()
+    modules = listOf("javafx.base", "javafx.controls", "javafx.media", "javafx.graphics")
     // set compileOnly for crosspackage to avoid packaging host javafx jmods for all target platforms
     if (project.gradle.startParameter.taskNames.intersect(listOf("crosspackage", "dist")).isNotEmpty()) {
         configuration = "compileOnly"
@@ -56,53 +54,87 @@ javafx {
 val javaFXOptions = the<JavaFXOptions>()
 
 dependencies {
-    implementation("org.scala-lang:scala-library:2.13.16")
-    implementation("org.scalafx:scalafx_2.13:21.0.0-R32")
-    implementation("jakarta.mail:jakarta.mail-api:2.1.3")
-    implementation("org.eclipse.angus:angus-mail:2.0.3")
-    implementation("com.sun.mail:gimap:2.0.1")
-    cPlatforms.forEach {platform ->
-        val cfg = configurations.create("javafx_$platform")
-        org.openjfx.gradle.JavaFXModule.getJavaFXModules(javaFXOptions.modules).forEach { m ->
-            project.dependencies.add(cfg.name,"org.openjfx:${m.artifactName}:${javaFXOptions.version}:$platform")
-        }
+    implementation("org.scala-lang:scala-library:2.13.18")
+    implementation("org.scalafx:scalafx_2.13:24.0.2-R36") {
+        exclude("org.openjfx") // otherwise image includes host jars, possibly 24<>25 issue
     }
+    implementation("jakarta.mail:jakarta.mail-api:2.1.5")
+    implementation("org.eclipse.angus:angus-mail:2.0.5")
+    implementation("com.sun.mail:gimap:2.0.2")
+
+    addJavafxDependencies()
 }
 
 runtime {
-    options.set(listOf("--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages"))
+    options.set(listOf("--strip-debug", "--compress", "zip-6", "--no-header-files", "--no-man-pages"))
     // check "gradle suggestModules", and add jdk.crypto.ec for ssl handshake
-    modules.set(listOf("java.desktop", "jdk.unsupported", "jdk.jfr", "java.logging", "java.xml", "java.security.sasl", "java.datatransfer",
+    modules.set(listOf("java.desktop", /*"jdk.unsupported", */"jdk.jfr", "java.logging", "java.xml", "java.security.sasl", /*"java.datatransfer",*/
             "jdk.crypto.ec"))
-
-    // sets targetPlatform JDK for host os from toolchain, for others (cross-package) from adoptium / jdkDownload
-    // https://github.com/beryx/badass-runtime-plugin/issues/99
-    // if https://github.com/gradle/gradle/issues/18817 is solved: use toolchain
-    fun setTargetPlatform(jfxplatformname: String) {
-        val platf = if (jfxplatformname == "win") "windows" else jfxplatformname // jfx expects "win" but adoptium needs "windows"
-        val os = org.gradle.internal.os.OperatingSystem.current()
-        var oss = if (os.isLinux) "linux" else if (os.isWindows) "windows" else if (os.isMacOsX) "mac" else ""
-        if (oss == "") throw GradleException("unsupported os")
-        if (System.getProperty("os.arch") == "aarch64") oss += "-aarch64"// https://github.com/openjfx/javafx-gradle-plugin#4-cross-platform-projects-and-libraries
-        if (oss == platf) {
-            targetPlatform(jfxplatformname, javaToolchains.launcherFor(java.toolchain).get().executablePath.asFile.parentFile.parentFile.absolutePath)
-        } else { // https://api.adoptium.net/q/swagger-ui/#/Binary/getBinary
-            targetPlatform(jfxplatformname) {
-                val ddir = "${if (os.isWindows) "c:/" else "/"}tmp/jdk$javaVersion-$platf"
-                println("downloading jdks to or using jdk from $ddir, delete folder to update jdk!")
-                @Suppress("INACCESSIBLE_TYPE")
-                setJdkHome(
-                    jdkDownload("https://api.adoptium.net/v3/binary/latest/$needMajorJavaVersion/ga/$platf/x64/jdk/hotspot/normal/eclipse?project=jdk",
-                        closureOf<org.beryx.runtime.util.JdkUtil.JdkDownloadOptions> {
-                            downloadDir = ddir // put jdks here so different projects can use them!
-                            archiveExtension = if (platf == "windows") "zip" else "tar.gz"
-                        }
-                    )
-                )
-            }
-        }
+    targetPlatforms.empty()
+    crossPlatforms.forEach {
+        targetPlatform(it, downloadJdkWithJmods(it))
     }
-    cPlatforms.forEach { setTargetPlatform(it) }
+}
+
+tasks.register<CrossPackage>("crosspackage") {
+    dependsOn("runtime")
+    execfilename = "GmailAttachmentRemover"
+    macicnspath = "src/deploy/macosx/GmailAttachmentRemover.icns"
+}
+
+tasks.register("dist") {
+    dependsOn("crosspackage")
+    doLast {
+        println("Deleting build/[image,jre,install]")
+        project.delete(project.runtime.imageDir.get(), project.runtime.jreDir.get(), "${project.layout.buildDirectory.get().asFile.path}/install")
+        println("Created zips in build/crosspackage")
+    }
+}
+
+/////////////////////////////////////////////////////////////////////////////////////
+///////////////// crosspackage helpers jdk 25 v1
+/////////////////////////////////////////////////////////////////////////////////////
+
+fun crossPlatformToJfxTarget(cp: String): String {
+    return when(cp) { // https://github.com/openjfx/javafx-gradle-plugin?tab=readme-ov-file#4-cross-platform-projects-and-libraries
+        "linux-x86", "linux-x64" -> "linux"
+        "linux-aarch64" -> "linux-aarch64"
+        "windows-x86", "windows-x64" -> "win"
+        "mac-x86", "mac-x64" -> "mac"
+        "mac-aarch64" -> "mac-aarch64"
+        else -> throw GradleException("platformSpecToJfxTarget not supported: $cp")
+    }
+}
+fun crossPlatformToList(cp: String): List<String> {
+    return cp.split("-")
+}
+fun downloadExtract(ddir: File, zip: Boolean, dropPaths: Int, durl: String) {
+    println(" downloadExtract: $ddir, $zip, $dropPaths, $durl")
+    ddir.mkdirs()
+    val dfile = File(ddir.absolutePath + "/tmpfile.${if (zip) "zip" else "tar.gz"}")
+    println("  download $durl ...")
+    URI(durl).toURL().openStream().use { input -> dfile.outputStream().use { output -> input.copyTo(output) } }
+    println("  downloaded to ${dfile.absolutePath}, extracting...")
+    copy {
+        from((if (zip) zipTree(dfile) else tarTree(dfile))).into(ddir).eachFile { // drop first folder
+            relativePath = RelativePath(true, *relativePath.segments.drop(dropPaths).toTypedArray())
+        }.includeEmptyDirs = false
+    }
+    dfile.delete()
+}
+fun downloadJdkWithJmods(platformSpec: String): String {
+    println("downloadJdkWithJmods $platformSpec ...")
+    val os = org.gradle.internal.os.OperatingSystem.current()
+    val psl = crossPlatformToList(platformSpec)
+    val ddir = File("${if (os.isWindows) "c:/" else "/"}tmp/jdkjmod-$needMajorJavaVersion-${psl[0]}-${psl[1]}")
+    val zip = (psl[0] == "windows")
+    if (ddir.exists()) {
+        println("  not downloading, delete folder to re-download/update: ${ddir.absolutePath}")
+        return ddir.absolutePath
+    }
+    downloadExtract(ddir, zip,1, "https://api.adoptium.net/v3/binary/latest/$needMajorJavaVersion/ga/${psl[0]}/${psl[1]}/jdk/hotspot/normal/eclipse?project=jdk")
+    downloadExtract(File(ddir.absolutePath + "/jmods"), zip,1, "https://api.adoptium.net/v3/binary/latest/$needMajorJavaVersion/ga/${psl[0]}/${psl[1]}/jmods/hotspot/normal/eclipse?project=jdk")
+    return ddir.absolutePath
 }
 
 open class CrossPackage : DefaultTask() {
@@ -178,56 +210,22 @@ open class CrossPackage : DefaultTask() {
                     // zip it
                     zipTo(File("${project.layout.buildDirectory.get().asFile.path}/crosspackage/$execfilename-$t.zip"), File("${project.layout.buildDirectory.get().asFile.path}/crosspackage/$t"))
                 }
-                t == "win" -> {
+                t.startsWith("win") -> {
                     File("$imgdir/bin/$execfilename.bat").delete() // from runtime, not nice
                     val pf = File("$imgdir/$execfilename.bat")
                     pf.writeText("""
                         set JLINK_VM_OPTIONS=${project.application.applicationDefaultJvmArgs.joinToString(" ")}
                         set DIR=%~dp0
-                        start "" "%DIR%\bin\javaw" %JLINK_VM_OPTIONS% -classpath "%DIR%/lib/*" ${project.application.mainClass.get()} 
+                        start "" "%DIR%\bin\javaw" %JLINK_VM_OPTIONS% -classpath "%DIR%/lib/*" ${project.application.mainClass.get()}  
                     """.trimIndent())
                     zipTo(File("${project.layout.buildDirectory.get().asFile.path}/crosspackage/$execfilename-$t.zip"), File(imgdir))
                 }
                 t.startsWith("linux") -> {
                     zipTo(File("${project.layout.buildDirectory.get().asFile.path}/crosspackage/$execfilename-$t.zip"), File(imgdir))
+                    println("NOTE: linux zip might need chmod -R a+x")
                 }
             }
         }
-    }
-}
-
-tasks.register<CrossPackage>("crosspackage") {
-    dependsOn("runtime")
-    execfilename = "GmailAttachmentRemover"
-    macicnspath = "src/deploy/macosx/GmailAttachmentRemover.icns"
-}
-
-tasks.withType(CreateStartScripts::class).forEach {script ->
-    script.doFirst {
-        script.classpath =  files("lib/*")
-    }
-}
-
-// copy jmods for each platform
-tasks["runtime"].doLast {
-    cPlatforms.forEach { platform ->
-        println("Copy jmods for platform $platform")
-        val cfg = configurations["javafx_$platform"]
-        cfg.incoming.files.forEach { f ->
-            copy {
-                from(f)
-                into("${project.runtime.imageDir.get()}/${project.name}-$platform/lib")
-            }
-        }
-    }
-}
-
-tasks.register("dist") {
-    dependsOn("crosspackage")
-    doLast {
-        println("Deleting build/[image,jre,install]")
-        project.delete(project.runtime.imageDir.get(), project.runtime.jreDir.get(), "${project.layout.buildDirectory.get().asFile.path}/install")
-        println("Created zips in build/crosspackage")
     }
 }
 
@@ -243,3 +241,37 @@ tasks.withType<com.github.benmanes.gradle.versions.updates.DependencyUpdatesTask
     }
     gradleReleaseChannel = "current"
 }
+
+// copy jmods for each platform. note that the build host jmods are still around, not worth removing them.
+tasks["runtime"].doLast {
+    crossPlatforms.forEach { platform ->
+        println("Copy jmods for platform $platform")
+        val cfg = configurations["javafx_$platform"]
+        cfg.incoming.files.forEach { f ->
+            copy {
+                from(f)
+                into("${project.runtime.imageDir.get()}/${project.name}-$platform/lib")
+            }
+        }
+    }
+}
+
+fun addJavafxDependencies() {
+    crossPlatforms.forEach { cp ->
+        val cfg = configurations.create("javafx_$cp")
+        org.openjfx.gradle.JavaFXModule.getJavaFXModules(javaFXOptions.modules).forEach { m ->
+            project.dependencies.add(cfg.name,"org.openjfx:${m.artifactName}:${javaFXOptions.version}:${crossPlatformToJfxTarget(cp)}")
+        }
+        // fix this https://github.com/openjfx/javafx-gradle-plugin?tab=readme-ov-file#variants
+        cfg.attributes.attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage::class, Usage.JAVA_RUNTIME))
+        cfg.attributes.attribute(OperatingSystemFamily.OPERATING_SYSTEM_ATTRIBUTE, objects.named(OperatingSystemFamily::class, "mac"/*platform.osFamily*/))
+        cfg.attributes.attribute(MachineArchitecture.ARCHITECTURE_ATTRIBUTE, objects.named(MachineArchitecture::class, "aarch64"/*platform.arch*/))
+    }
+}
+
+tasks.withType(CreateStartScripts::class).forEach {script ->
+    script.doFirst {
+        script.classpath =  files("lib/*")
+    }
+}
+
